plugin-example-app/src/app/with-k8s/descriptions/httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-httpbin
  namespace: test
spec:
  clusterIP: None
  ports:
    - name: httpbin
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: httpbin
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deploy-httpbin
  namespace: test
  labels:
    app: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin:${tag}
          ports:
            - containerPort: 80
              protocol: TCP
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-httpbin
  namespace: test
spec:
  ingressClassName: nginx
  rules:
    - host: httpbin2.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-httpbin
                port:
                  number: 80
